name:                GrahamScan
version:             0.1.0.0
synopsis:            Implementation of the Graham Scan algorithm
license:             MIT
license-file:        LICENSE
author:              Ryan Dennehy
maintainer:          rmd5947@rit.edu
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable Main
    main-is:             Main.hs
    other-modules:       MergeSort, PointData, GrahamScan
    build-depends:       base >=4.9 && <4.10
    default-language:    Haskell2010

test-suite PointTests
    type:               exitcode-stdio-1.0
    main-is:            PointTests.hs
    other-modules:      PointData
    hs-source-dirs:     test, .
    build-depends:      base >= 4.9 && <4.10,
                        test-framework,
                        test-framework-hunit,
                        HUnit
    default-language:   Haskell2010

test-suite MergeSortTests
    type:               exitcode-stdio-1.0
    main-is:            MergeSortTests.hs
    other-modules:      MergeSort
    hs-source-dirs:     test, .
    build-depends:      base >= 4.9 && <4.10,
                        test-framework,
                        test-framework-hunit,
                        HUnit
    default-language:   Haskell2010

test-suite GrahamScanTests
    type:               exitcode-stdio-1.0
    main-is:            GrahamScanTests.hs
    other-modules:      GrahamScan
    hs-source-dirs:     test, .
    build-depends:      base >= 4.9 && <4.10,
                        test-framework,
                        test-framework-hunit,
                        HUnit
    default-language:   Haskell2010
